
CCW fixes this by dissocing the :main key in the project.clj map used to start the nrepl :headless server.

== Changes between Counterclockwise 0.24.0 and 0.24.1

`0.24.1` released on March 30, 2014

Bug Fix: The System environment was not correctly passed to the launched project process, causing all sorts of trouble (X Window session not found, java.io.tmpdir not set correctly, etc.)

== Changes between Counterclockwise 0.23.0 and 0.24.0

`0.24.0` released on March 20, 2014

=== REPL launcher revisited

The command "Headless Leiningen REPL" introduced in a recent release works well, so it has been set as the default behaviour for starting a new REPL for Leiningen projects.

This means that for Leiningen projects, kbd:[Ctrl+Alt S] (resp. kbd:[Cmd+Alt S] for OSX), or 'Run/Debug as Clojure Application' will truly use Leiningen under the hood to start a headless REPL for the project.

Also now by default, keyboard shortcut kbd:[Ctrl+Alt S] starts the project in debug mode and automatically connects Eclipse to the projects JVM debugger.

=== Generic Leiningen Launcher

- Ensure all JVMs created by Leiningen are killed when the main process is killed via the Console "Terminate" button.
- "Headless Leiningen REPL" command kbd:[Alt+L H] has been removed now that it is the default behaviour for starting Leiningen projects

=== Counterclockwise/Standalone

- For Linux/Windows, the zip now contains a root folder named Counterclockwise-<version>
- For OS X, the zip now contains a root folder named Counterclockwise-<version>.app ; it is thus recognized as an OS X Application folder


== Changes between Counterclockwise 0.22.0 and 0.23.0

`0.23.0` released on January 23, 2014

Fixes the compatibility problems with Eclipse Indigo!

=== Counterclockwise/Standalone

- It is now possible to use the usual Software Update Site to upgrade a Counterclockwise/Standalone install with new versions of Counterclockwise.
- The version is now displayed in the Counterclockwise About Dialog.