@@ -15,6 +15,7 @@ ClojurePreferencePage_show_more_context_in_tabs=Display namespace in tabs (inste
 ClojureGeneralPreferencePage_Description=General Settings for Clojure development:
 ClojureGeneralPreferencePage_automatic_nature_addition=Automatic detection of Clojure project
 ClojureGeneralPreferencePage_auto_reload_on_startup_save=Automatic namespaces load on start and on save
+ClojureGeneralPreferencePage_launch_repls_in_debug_mode=Launch REPLs in Debug mode
 SyntaxColoringPreferencePage_link=Default colors and font can be configured on the <a href=\"org.eclipse.ui.preferencePages.GeneralTextEditor\">Text Editors</a> and on the <a href=\"org.eclipse.ui.preferencePages.ColorsAndFonts\">Colors and Fonts</a> preference page.
 SyntaxColoringPreferencePage_coloring_element=Element
 SyntaxColoringPreferencePage_enable=Enab&le
